--- a/Java e Javascript/javascript Dario/Es_Twitter/twitter-benvenuto.html
+++ b/Java e Javascript/javascript Dario/Es_Twitter/twitter-benvenuto.html
@@ -6,10 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>BRAV STRUNZ</h1>
-    
+   <h1>Benvenuto</h1>
 
+<form name="modulo">
+    <textarea name="testo" cols="50" rows="10" id="textarea"></textarea>
+    <br>
+    <p id="conta2"></p>
+</form>
 
+ <script src="./js/script02.js"></script>
 
 </body>
 </html>
