--- a/Java e Javascript/javascript Dario/Es_Twitter/twitter-benvenuto.html
+++ b/Java e Javascript/javascript Dario/Es_Twitter/twitter-benvenuto.html
@@ -8,11 +8,15 @@
 <body>
    <h1>Benvenuto</h1>
 
-<form name="modulo">
+<form name="modulo" id="modulos">
     <textarea name="testo" cols="50" rows="10" id="textarea"></textarea>
     <br>
     <p id="conta2"></p>
 </form>
+
+
+<button id="btnInvio">Invia Messaggio</button>
+<div id="boxMessaggi"></div>
 
  <script src="./js/script02.js"></script>
 
