--- a/Java e Javascript/javascript Dario/Es_Twitter/twitter.html
+++ b/Java e Javascript/javascript Dario/Es_Twitter/twitter.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/twitter.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <title>threads</title>
 </head>
 <body>
-   <h1>Twitter</h1>
+    <div class="schermo">
+    <div class="container">
+        <div class="logo">
+            <img src="Twitter X.svg" alt="">
+         </div>
+   <h1> <Strong>Accedi a Twitter</Strong></h1>
+   
 
     <form id="formReg" method="get" action="./twitter-benvenuto.html">
 
@@ -15,17 +23,17 @@
         <input type="password" id="password" name="password" placeholder="Inserisci la tua password">
 
        <br>
-        <input type="submit" value="Login">
+        <input type="submit" value="Login" id="login">
        
     </form>
-
-
-
 
 
     <div id="demo"></div>
     <div id="feed"></div>
 
+
+    </div>
+    </div>
 
     <script src="./js/script01.js"></script>
 
