--- a/Java e Javascript/javascript Dario/Es_LocalSession/benvenuto.html
+++ b/Java e Javascript/javascript Dario/Es_LocalSession/benvenuto.html
@@ -34,6 +34,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
+
+  <script src="./js/02-script.js"></script>
 </body>
 
 </html>
