--- a/Java e Javascript/javascript Dario/Lezione9-JSON/02-barbie.html
+++ b/Java e Javascript/javascript Dario/Lezione9-JSON/02-barbie.html
@@ -12,6 +12,14 @@
     <p id="attori"></p>
     <p id="regista"></p>
 
+    <hr>
+
+    <div>
+        <h4>Ratings</h4>
+        <ul id="valutazioni">
+            
+        </ul>
+    </div>
 
     <script src="./js/script02.js"></script>
 </body>
