--- a/Java e Javascript/javascript Dario/Es_LocalSession/benvenuto.html
+++ b/Java e Javascript/javascript Dario/Es_LocalSession/benvenuto.html
@@ -76,6 +76,9 @@
   </div>
   <main>
   
+    <div class="mb-3">
+      <button id="btnLogout"></button>
+    </div>
 
   <div id="demo"></div>
     
