--- a/Java e Javascript/javascript Dario/Es_LocalSession/index.html
+++ b/Java e Javascript/javascript Dario/Es_LocalSession/index.html
@@ -77,3 +77,9 @@
     </body>
 
     <app-content ng-version="16.0.0"></app-content></html>
+
+
+    <!-- bs5- form-control, form label per la direttiva
+    <label for = "">Nome</label>
+    <input type = "text" id="nome"> per tutti i cmapi 
+    -->
