--- a/Java e Javascript/javascript Dario/Es_LocalSession/404.html
+++ b/Java e Javascript/javascript Dario/Es_LocalSession/404.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     
-    <H1>risorsa non trovata</H1>
+    <h1>404, risorsa non trovata</h1>
 
-
+    <button>
+        <a href="./index.html">Torna alla index</a>
+    </button>
 </body>
 </html>
