--- a/Java e Javascript/javascript Dario/Es_LocalSession/arrivederci.html
+++ b/Java e Javascript/javascript Dario/Es_LocalSession/arrivederci.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+
     <h1>Ciao, alla prossima</h1>
+    
 
     <script>
-        setTimeout(() =>{
-            location.href = "./index.html";
-            
-        }
 
-        )
+        setTimeout(() => {
+            location.href = "./index.html"
+        }, 3000);
 
     </script>
 </body>
