--- a/Java e Javascript/javascript Dario/Lezione10-AJAX/04-POST.html
+++ b/Java e Javascript/javascript Dario/Lezione10-AJAX/04-POST.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
+    <button id="btnPost">Carica Info</button>
 
-  <script src="./js/script03.js"></script>
-  
+
+    <script src="./js/script04.js"></script>
 </body>
 </html>
