--- a/Java e Javascript/javascript Dario/Lezione10-AJAX/RegistroDiClasse/index.html
+++ b/Java e Javascript/javascript Dario/Lezione10-AJAX/RegistroDiClasse/index.html
@@ -52,13 +52,36 @@
             <div class="container">
                 <h2>Lista Studenti</h2>
 
-                <ul class="list-group list-group-numbered" id="listaStudenti">
+                <ul class="list-group" id="listaStudenti">
                     <!-- <li class="list-group-item ">Active item</li> -->
                     
                 </ul>
             </div>
         </section>
 
+        <section class=""my-5>
+            <div class="container">
+                <h2>Lista Docenti</h2>
+                <div class="card-group">
+                    <div class="card">
+                        <img class="card-img-top" src="holder.js/100x180/" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">Title</h4>
+                            <p class="card-text">Text</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="holder.js/100x180/" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">Title</h4>
+                            <p class="card-text">Text</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
+        </section>
 
 
     </main>
@@ -75,7 +98,7 @@
 
     <script src="./js/scriptClasse.js"></script>
     <script src="./js/scriptRegistraStud.js"></script>
-
+    <script src="./js/scriptDocenti.js"></script>
 
 </body>
 
