--- a/Java e Javascript/javascript Dario/Lezione10-AJAX/RegistroDiClasse/index.html
+++ b/Java e Javascript/javascript Dario/Lezione10-AJAX/RegistroDiClasse/index.html
@@ -62,9 +62,10 @@
 
         </section>
 
-        <section class="row-cols-sm-2  "my-5>
+        <section class="row-cols-sm-2" my-5>
                        
             <div class="container">
+                <h2>Lista Docenti</h2>
                 <button type="button" class="btn btn-outline-success" style="max-width: 10rem;" id="btnonline">Online</button>
                 <button type="button" class="btn btn-outline-danger"style="max-width: 10rem;" id="btnoffline">Offline</button>
                 <button type="button" class="btn btn-outline-info"style="max-width: 10rem;" id="btntutti">Tutti</button>
@@ -109,7 +110,7 @@
     <script src="./js/scriptClasse.js"></script>
     <script src="./js/scriptRegistraStud.js"></script>
     <script src="./js/scriptDocenti.js"></script>
-
+    
 </body>
 
 </html>
