--- a/Java e Javascript/javascript Dario/Es_POKEDEX/index.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEX/index.html
@@ -34,6 +34,8 @@
         
         <button class="btn btn-primary" type="submit"> Accedi</button>
       </form>
+
+      <div id="demo"></div>
   
   
     </div>
