--- a/Java e Javascript/javascript Dario/Es_POKEDEX/scegliPokemon.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEX/scegliPokemon.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <button class="btn btn-primary" id="btn1" type="submit" action="./pokedex.html">pokedex</button>
+            <a class="nav-link" href="./pokedex.html">Pokedex</a>
           </li>
 
 
