--- a/Java e Javascript/javascript Dario/Es_POKEDEX/pokedex.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEX/pokedex.html
@@ -52,6 +52,8 @@
               <input type="text"
                 class="form-control" name="tipo" id="tipo" aria-describedby="helpId">
             </div>
+
+            <input type="hidden" id="numeroCard">
             
             <button class="btn btn-primary" type="submit" id="btnSalvaModifiche">Salva</button>
             <button class="btn btn-danger" id="btnAnnulla" type="button">Annulla Modifica</button>
