--- a/Java e Javascript/javascript Dario/Es_POKEDEX/pokedex.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEX/pokedex.html
@@ -53,6 +53,12 @@
                 class="form-control" name="tipo" id="tipo" aria-describedby="helpId">
             </div>
 
+            <div class="mb-3">
+              <label for="" class="form-label">Descrizione</label>
+              <input type="text"
+                class="form-control" name="descrizione" id="descrizione" aria-describedby="helpId">
+            </div>
+
             <input type="hidden" id="numeroCard">
             
             <button class="btn btn-primary" type="submit" id="btnSalvaModifiche">Salva</button>
