--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/index.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/index.html
@@ -66,12 +66,13 @@
       </div>
     </nav>
   </header>
-  <main>
 
-    <br>
-    <div class="container ">
+
+  <main class="background">
+
+  
       
-    <div class="card text-dark bg-light mb-3 mt-5 d-inline-flex justify-content-start me-5">
+    <div class="card text-dark bg-light mb-3 mt-5 d-inline-flex ">
       <div class="card-header">Pronti per una nuova avventura?</div>
       <div class="card-body">
         <h5 class="card-title">Login</h5>
@@ -88,7 +89,7 @@
       </form>
       </div>
     </div>
-  </div>
+  
 
 
 
@@ -104,7 +105,7 @@
 
       <div class="col-lg-3 mx-auto ">
 
-        <h5 class="fw-bolder fs-4 mt-3 mb-4">Sailor</h5>
+        <h5 class="fw-bolder fs-4 mb-4">Sailor</h5>
 
         <ul class="list-unstyled listaStile">
           <li>
@@ -131,23 +132,23 @@
 
       <div class="col-lg-2 mx-auto ">
 
-        <h5 class="mt-3 mb-3">Useful Links</h5>
+        <h5 class=" mb-3">Useful Links</h5>
 
         <ul class="list-unstyled fw-">
           <li class="my-2">
-              <p style="color: #000000;"><i class="ri-arrow-right-s-line"></i> Home</p>
+              <p><i class="ri-arrow-right-s-line"></i> Home</p>
           </li>
           <li class="my-2">
-              <p style="color: #000000;"><i class="ri-arrow-right-s-line"></i> About us</p>
+              <p><i class="ri-arrow-right-s-line"></i> Profilo</p>
           </li>
           <li class="my-2">
-              <p "><i class="ri-arrow-right-s-line"></i> Services</p>
+              <p><i class="ri-arrow-right-s-line"></i> Lista Pokemon</p>
           </li>
           <li class="my-2">
-              <p style="color: #000000;"><i class="ri-arrow-right-s-line"></i> Terms of service</p>
+              <p><i class="ri-arrow-right-s-line"></i> Pokedex</p>
           </li>
           <li class="my-2">
-              <p style="color: #000000;"><i class="ri-arrow-right-s-line"></i> Privacy policy</p>
+              <p><i class="ri-arrow-right-s-line"></i> Shop</p>
           </li>
         </ul>
 
@@ -155,7 +156,7 @@
 
       <div class="col-lg-2 mx-auto ">
 
-        <h5 class="mt-3 mb-3 " >Our Services</h5>
+        <h5 class=" mb-3 " >Our Services</h5>
 
         <ul class="list-unstyled">
           <li class="my-2">
@@ -179,11 +180,11 @@
 
       <div class="col-lg-5 mx-auto ">
 
-        <h5 class="mt-3 mb-4">Our Newsletter</h5>
+        <h5 class="mb-4">Our Newsletter</h5>
 
         <ul class="list-unstyled">
           <li>
-            Tamen quem nulla quae legam multos aute sint culpa legam noster magna
+            Preparatevi a passare dei guai, dei guai molto grossi.
           </li>
           <li class="my-4">
               <form class="d-flex" role="search">
@@ -200,7 +201,7 @@
   </div>
 
   <div class="footer-copyright text-center py-3  text-white" style=" background-color: #959697;">
-      ©Copyright <strong>Sito di:</strong> Erica Landolfo, Gianmarco Marrandino, Leonardo
+      ©Copyright <strong>Sito di:</strong> Erica Landolfo, Gianmarco Marrandino, Leonardo Stefanini
      
   </div>
 
