--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
@@ -41,20 +41,26 @@
   <main>
 
     <div id="demo">
-
+      <div class="col-md-4 mb-3">
+        <div class="card" style="width: 18rem;">
+          <ul class="list-group list-group-flush ">
+              <li class="list-group-item"><button type="button" class="btn btn-primary bottoneAggiungi">Aggiungi al Pokedex</button></li>
+          </ul>
+          </div>
+      </div>
     </div>
 
-
+    
 
 
    
 
 
-    </div>
-    </div>
+   
 
     <div class="sticky-bottom text-center bottom-0 end-0" id="spazioAlert">
 
+      
 
   </main>
   <footer>
