--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
@@ -41,12 +41,9 @@
   <main>
 
     <div id="demo">
-      <div class="col-md-4 mb-3">
-        <div class="card" style="width: 18rem;">
-          <ul class="list-group list-group-flush ">
-              <li class="list-group-item"><button type="button" class="btn btn-primary bottoneAggiungi">Aggiungi al Pokedex</button></li>
+      <div class="card" style="width: 18rem;">
+        <ul class="list-group list-group-flush" id="lista">
           </ul>
-          </div>
       </div>
     </div>
 
