--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/scegliPokemon.html
@@ -127,7 +127,7 @@
 
   </main>
   
-    <footer class="page-footer font-small indigo mt-auto text-white " style=" background-color: #ffffff;">
+    <footer class="page-footer font-small indigo mt-auto text-white h-75" style=" background-color: #ffffff;">
        
      <div class="container">
        <img class="bottone" src="./img/bottone.png">
