--- a/Java e Javascript/javascript Dario/Es_POKEDEXcopia/index.html
+++ b/Java e Javascript/javascript Dario/Es_POKEDEXcopia/index.html
@@ -44,18 +44,18 @@
               <a class="nav-link" href="#">Shop</a>
             </li>
             </ul>
-            <ul class="navbar-nav ">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
+            
+              <div class="dropdown-center me-4">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Profilo
+                </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Profilo</a></li>
+                <li><a class="dropdown-item" href="#">Modifica</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Logout</a></li>
               </ul>
             </li>
           </ul>
@@ -72,7 +72,7 @@
 
   
     <div class="container mt-3 ">
-    <div class="card text-dark   mt-5 d-inline-flex align-items-center ms-4 ">
+    <div class="card text-dark   mt-5 d-inline-flex align-items-center  ms-4 ">
       <div class="card-header">Pronti per una nuova avventura?</div>
       <div class="card-body " >
         <h5 class="card-title">Login</h5>
