--- a/Java e Javascript/javascript Dario/ProjectWork/prova2.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/prova2.html
@@ -11,28 +11,28 @@
 <body>
     <div class="container">
         <div id="slide">
-            <div class="item" style="background-image: url(1.jpg);">
+            <div class="item" style="background-image: url(./img/Interstellar.jpg);">
                 <div class="content">
                     <div class="name">LUNDEV</div>
                     <div class="des">Tinh ru anh di chay pho, chua kip chay pho thi anhchay mat tieu</div>
                     <button>See more</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(4.jpg);">
+            <div class="item" style="background-image: url(./img/Oppenheimer.jpeg);">
                 <div class="content">
                     <div class="name">LUNDEV</div>
                     <div class="des">Tinh ru anh di chay pho, chua kip chay pho thi anhchay mat tieu</div>
                     <button>See more</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(3.jpg);">
+            <div class="item" style="background-image: url(./img/Barbie.jpeg);">
                 <div class="content">
                     <div class="name">LUNDEV</div>
                     <div class="des">Tinh ru anh di chay pho, chua kip chay pho thi anhchay mat tieu</div>
                     <button>See more</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(4.jpg);">
+            <div class="item" style="background-image: url(./img/Oppenheimer.jpeg);">
                 <div class="content">
                     <div class="name">LUNDEV</div>
                     <div class="des">Tinh ru anh di chay pho, chua kip chay pho thi anhchay mat tieu</div>
