--- a/HTML CSS/swiper/multi-slides.html
+++ b/HTML CSS/swiper/multi-slides.html
@@ -7,10 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
    
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
 
 
@@ -47,6 +44,19 @@
       </div>
       <div class="swiper-slide">
         <img class="img-fluid" src="https://source.unsplash.com/600x400/?france" alt="">
+      </div>
+
+      <div class="swiper-slide">
+        <img class="img-fluid" src="https://source.unsplash.com/600x400/?portugal" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img class="img-fluid" src="https://source.unsplash.com/600x400/?portugal" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img class="img-fluid" src="https://source.unsplash.com/600x400/?portugal" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img class="img-fluid" src="https://source.unsplash.com/600x400/?portugal" alt="">
       </div>
 
     
