--- a/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
@@ -42,8 +42,20 @@
                 </li>
               </ul>
               <ul class="navbar-nav ">
-                <a class="nav-link" href="./Sign In.html">Accedi</a>
-                <!-- <button type="button" class="btn btn-dark">Sign up!</button> -->
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                      <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://www.corriere.it/methode_image/2021/06/03/Spettacoli/Foto%20Spettacoli/Jim-Carrey-Grinch-cf-cropped-289-0-955-720.jpg" width="40" height="40" class="rounded-circle">
+                      </button>
+                      <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a class="dropdown-item" href="#">Prenotazioni Eventi</a></li>
+                        <li><a class="dropdown-item" href="#">Cambia Eventi</a></li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
                   </ul>
                 </li>
               </ul>
