--- a/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
@@ -11,7 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
 
+
     <link rel="stylesheet" href="./css/Homepage.css">
+    <link rel="stylesheet" href="./prova5.css">
 </head>
 <body>
     
@@ -211,6 +213,14 @@
           <div class="swiper-pagination"></div>
         </div>
     
+        <!-- TOP 3 -->
+        <div class="container2 ">
+          <div class="yoda ">
+              <img class="logo" src="https://assets.codepen.io/308367/yoda-logo.webp" alt="" />
+              <img class="front-image" src="https://assets.codepen.io/308367/yoda-front.png" alt="yoda holding his lightsabre up, the glow highlighting an angry look on his face" />
+              <img class="bg-image" src="https://assets.codepen.io/308367/yoda-on-dagobah.jpg" alt="yoda looking peaceful on dagobah" />
+            </div>
+          </div>
 
     <!-- CALENDARIO -->
     <div class="container text-center bg-white ">
