--- a/Java e Javascript/javascript Dario/ProjectWork/tabsprove.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/tabsprove.html
@@ -14,8 +14,8 @@
     
     <section id="tabs">
         <div class="container">
-            <div class="row">
-                <h2 class="text-center">Prossimi Eventi</h2>
+                <h6 class="section-title h1">Eventi Futuri</h6>
+                <div class="row">
                 <div class="col-xs-12 ">
                     <nav>
                         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
@@ -45,8 +45,17 @@
                                                          </div>
                                                     </div>
                                                 </div>
+                                            </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod esse cumque excepturi necessitatibus quibusdam provident ipsum nisi atque repellat? Adipisci nesciunt assumenda qui eaque, corporis tempora labore omnis ipsam.
+                            <div class="col">
+                                <div class="card" style="width: 30rem; ">
+                                     <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                             <h5 class="card-title">Taylor Swift</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                         </div>
+                                    </div>
+                                </div>
                         </div>
                         
                     </div>
