--- a/Java e Javascript/javascript Dario/ProjectWork/tabsprove.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/tabsprove.html
@@ -8,9 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
-        integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+  
 
     <link rel="stylesheet" href="./css/tabs.css">
 </head>
@@ -22,68 +20,69 @@
             <h6 class="section-title h1">Eventi Futuri</h6>
             <!-- <div class="row">
                 <div class="col-xs-12 "> -->
-            <nav>
-                <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
-                        aria-controls="nav-home" aria-selected="true">Concerto</a>
-                    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                        aria-controls="nav-profile" aria-selected="false">Rassegna Letteraria</a>
-                </div>
-            </nav>
-            <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                    <nav>
+                        <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
+                                role="tab" aria-controls="nav-home" aria-selected="true">Concerto</a>
+                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
+                                role="tab" aria-controls="nav-profile" aria-selected="false">Rassegna Letteraria</a>
+                        </div>
+                    </nav>
+                    <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                            aria-labelledby="nav-home-tab">
 
-                    <div class="row">
-                        <!-- CARD 1 -->
-                        <div class="col-lg-6">
-                            <div class="card evento">
-                                <img src="/img/futuri-imaginedragons.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
+                            <div class="row">
+                            <!-- CARD 1 -->
+                                <div class="col-lg-6">
+                                    <div class="card evento">
+                                        <img src="/img/futuri-imaginedragons.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
 
-                                    <div class="card-content">
-                                        <h5 class="card-title">Taylor Swift</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit
-                                            longer.</p>
+                                            <div class="card-content">
+                                                <h5 class="card-title">Taylor Swift</h5>
+                                                <p class="card-text">This is a longer card with supporting text below as a
+                                                    natural lead-in to additional content. This content is a little bit
+                                                    longer.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- CARD 2 -->
+                                <div class="col-lg-6">
+                                    <div class="card evento">
+                                        <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <div class="card-content">
+                                                <h5 class="card-title">Taylor Swift</h5>
+                                                <p class="card-text">This is a longer card with supporting text below as a
+                                                    natural lead-in to additional content. This content is a little bit
+                                                    longer.</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- CARD 2 -->
-                        <div class="col-lg-6">
-                            <div class="card evento">
-                                <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <div class="card-content">
+                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                            <div class="col-lg-6">
+                                <div class="card evento">
+                                    <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <div class="card-content">
                                         <h5 class="card-title">Taylor Swift</h5>
                                         <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to additional content. This content is a little bit
-                                            longer.</p>
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                    <div class="col-lg-6">
-                        <div class="card evento">
-                            <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <div class="card-content">
-                                    <h5 class="card-title">Taylor Swift</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a
-                                        natural lead-in to additional content. This content is a little bit longer.
-                                    </p>
-                                </div>
-                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <!-- </div>
+                <!-- </div>
             </div> -->
         </div>
     </section>
