--- a/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
@@ -136,7 +136,7 @@
   </div>
 
 
-
+ <!-- CAROSELLO -->
   <h1 class="inostriEventi py-5 text-center">Eventi disponibili</h1>
   <div class="swiper mySwiper pb-5">
     <div class="swiper-wrapper">
@@ -144,7 +144,7 @@
         <div class="card bg-white" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">C</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -243,11 +243,12 @@
     <div class="swiper-pagination"></div>
   </div>
 
+
+  <!-- EVENTI FUTURI -->
   <section id="tabs">
     <div class="container">
       <h6 class="section-title h1">Eventi Futuri</h6>
-      <!-- <div class="row">
-                  <div class="col-xs-12 "> -->
+      
       <nav>
         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
           <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
@@ -267,7 +268,7 @@
                 <div class="card-body">
 
                   <div class="card-content">
-                    <h5 class="card-title">Taylor Swift</h5>
+                    <h5 class="card-title">Imagine Dragons</h5>
                     <p class="card-text">This is a longer card with supporting text below as a
                       natural lead-in to additional content. This content is a little bit
                       longer.</p>
@@ -298,7 +299,7 @@
               <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <div class="card-content">
-                  <h5 class="card-title">Taylor Swift</h5>
+                  <h5 class="card-title">Signore degli anelli</h5>
                   <p class="card-text">This is a longer card with supporting text below as a
                     natural lead-in to additional content. This content is a little bit longer.
                   </p>
